# finetune-model

./: .gitignore  MANIFEST.in  __main__.py  pyproject.toml  requirements.txt  setup.py
finetunemodel/: __main__.py
finetunemodel/ai_models/: model.py
finetunemodel/api/: ai_model.py  api.py
finetunemodel/models/: model.py
finetunemodel/router/: ai_model.py  modelrouter.py
finetunemodel/schemas/: schema.py
src/finetune-model/: main.py
src/finetune-model/ai_models/: model.py
src/finetune-model/api/: ai_model.py
src/finetune-model/config/: settings.py
src/finetune-model/data/: chroma.sqlite3
src/finetune-model/model/: model.py
src/finetune-model/router/: ai_model.py
src/finetune-model/schema/: schemas.py
